--- a/src/components/current-weather/current-weather.css
+++ b/src/components/current-weather/current-weather.css
@@ -1,9 +1,10 @@
 .weather {
 	width: 300px;
 	border-radius: 6px;
-	box-shadow: 10px -2px 20px 2px rgb(0 0 0 /30%);
-	color: #fff;
-	background-color: #333;
+	/* box-shadow: 8px 4px 8px 1px rgba(255, 255, 255); */
+
+	color: white;
+	background-color: rgb(44, 44, 44);
 	margin: 20px auto 0 auto;
 	padding: 0 20px 20px 20px;
 }
@@ -61,4 +62,5 @@
 	text-align: right;
 	font-weight: 600;
 	font-size: 12px;
+	color: #a87002;
 }
